--- a/src/index.html
+++ b/src/index.html
@@ -3,44 +3,70 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light" />
+    <link
+      rel="shortcut icon"
+      href="assets/favicon-32x32.png"
+      type="image/x-icon"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Social Media Dashboard</title>
+    <link
+      rel="stylesheet"
+      href="styles/dark.css"
+      media="(prefers-color-scheme: dark)"
+      id="theme-dark"
+    />
+    <link
+      rel="stylesheet"
+      href="styles/light.css"
+      media="(prefers-color-scheme: light)"
+      id="theme-light"
+    />
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/main.css" />
+
+    <link
+      rel="stylesheet"
+      href="styles/tablet.css"
+      media="screen and (min-width: 768px)"
+    />
+    <link
+      rel="stylesheet"
+      href="styles/desktop.css"
+      media="screen and (min-width: 1024px)"
+    />
   </head>
   <body>
-    <div class="container">
-      <header class="header">
+    <header class="header">
+      <div class="container container--header">
         <div class="header--left">
-          <span>Social Media Dashboard</span>
-          <span>Total Followers: 23,004</span>
+          <span class="header__title">Social Media Dashboard</span>
+          <span class="header__subtitle">Total Followers: 23,004</span>
         </div>
         <div class="header--right">
-          <span>Dark Mode</span>
-          <span>Button switch</span>
+          <span class="text">Dark Mode</span>
+          <input type="checkbox" class="checkbox" id="checkbox" />
+          <label for="checkbox" class="switch"></label>
         </div>
-      </header>
-      <main class="main">
-          <section class="social__stats">
-              <article class="stats">
-                  <img class="stats--icon" src="" alt="icon">
-                  <span class="stats--account">@account</span>
-                  <span class="stats--total">0000</span>
-                  <span class="stats--description">SUBSCRIBERS</span>
-                  <span class="stats--today">000 Today</span>
-              </article>
-          </section>
-          <section class="social__stats stats--overview">
-              <article class="stats">
-                  <span class="stats--description">views/likes</span>
-                  <img class="stats--icon" src="" alt="icon">
-                  <span class="stats--total">000</span>
-                  <span class="stats--today">%00</span>
-              </article>
-          </section>
-      </main>
-      <footer class="footer">
-          <span>Victor @ frontendmento.io</span>
-      </footer>
-    </div>
+      </div>
+    </header>
+    <main class="main">
+      <div class="container container--main">
+        <section class="stats stats--main" id="stats--main"></section>
+        <section class="stats stats--overview" id="stats--overview">
+          <span class="overview__title">overview - today</span>
+        </section>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="container container--footer">
+          <span class="text">Victor @ frontendmento.io</span>
+      </div>
+    </footer>
   </body>
+  <script src="js/index.js"></script>
 </html>
