--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
     </main>
     <footer class="footer">
       <div class="container container--footer">
-          <span class="text">Victor @ frontendmentor.io</span>
+          <span class="text">Vic @ frontendmentor.io</span>
       </div>
     </footer>
   </body>
